Use Map.ofEntries() in FilterFactory.